# belotte-coinchee

./: CMakeLists.txt  README.md  annonce.c  annonce.h  carte.c  carte.h  common.h  contrat.c  contrat.h  enchere.c  enchere.h  equipe.c  equipe.h  jeu.c  jeu.h  joueur.c  joueur.h  library.c  library.h  main.c  menuenchere.c  menuenchere.h  pli.c  pli.h  sauvegarde.c  sauvegarde.h  scores.txt
